--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+affine==2.4.0
 anyio==4.9.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -12,13 +13,19 @@ bleach==6.2.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.2
 config==0.5.1
+contourpy==1.3.2
+cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
+fonttools==4.57.0
 fqdn==1.5.1
 geopandas==1.0.1
 h11==0.14.0
@@ -48,7 +55,9 @@ jupyterlab==4.4.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.14
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mistune==3.1.3
 nbclient==0.10.2
@@ -74,12 +83,14 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 pyogrio==0.10.0
+pyparsing==3.2.3
 pyproj==3.7.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
+rasterio==1.4.3
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
